--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -35,7 +35,6 @@ p {
   align-items: center;
   z-index: 134;
   color: white;
-  background-color: #b372d6;
 }
 
 .app-navbar-home {
@@ -46,7 +45,7 @@ p {
   justify-content: space-around;
   gap: 250px;
   align-items: center;
-  z-index: 134;
+  z-index: 30;
 }
 
 .logo {
@@ -56,7 +55,7 @@ p {
   align-items:flex-start;
   justify-content: center;
   cursor: pointer;
-  z-index: 12;
+  z-index: 57;
 }
 
 
@@ -82,6 +81,21 @@ p {
   width: fit-content;
   height: fit-content;
   color: white;
+  font-size: 21px;
+  font-weight: 500;
+  text-decoration: none;
+  z-index: 12;
+}
+
+.nav-btn-black {
+  cursor: pointer;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  height: fit-content;
+  color: black;
   font-size: 21px;
   font-weight: 500;
   text-decoration: none;
@@ -137,7 +151,7 @@ p {
 
 .over-content {
   position: absolute;
-  z-index: 99;
+  z-index: 11;
   width: fit-content;
   height: fit-content;
   background-color: white;
@@ -368,12 +382,17 @@ p {
   display: none;
 }
 
+.nav-list-black {
+  display: none;
+}
+
 .adap-list {
   width: 180px;
   height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
   z-index: 57;
 }
 
@@ -383,15 +402,15 @@ p {
   left: 0px;
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  height: 20vh;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;                                      ;
   color: black;
   gap: 10px;
   background-color: #b372d6;
   z-index: 56;
-  padding: 80px 0px 0px 30px;
+  padding: 80px 0px 0px 0px;
   }
 
 
@@ -484,6 +503,12 @@ p {
 }
 
 @media screen and (max-width: 750px) {
+  
+
+
+
+
+
 
   .app-navbar {
     gap: 220px;
@@ -633,6 +658,13 @@ p {
     margin-right: 10px;
     z-index: 100;
     color: white;
+  }
+
+  .nav-list-black {
+    display:flex;
+    margin-right: 10px;
+    z-index: 100;
+    color: black;
   }
 
   .logo {
