--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -59,8 +59,6 @@ p {
 }
 
 
-
-
 .nav-container {
   width: fit-content;
   height: 100%;
@@ -109,7 +107,7 @@ p {
 
 
 
-
+ /* Home */
 
 .home-main-part {
   min-width: 100vw;
@@ -191,6 +189,24 @@ p {
 
 
 
+.menu-part {
+  min-width: 100vw;
+  min-height: fit-content;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0px 50px 0px;
+}
+
+.menu-text {
+  font-size: 24px;
+  padding: 25px 0px 30px 0px;
+}
+
+
+
+
 
 
 
@@ -215,25 +231,45 @@ p {
 
 
 
+
+
+
 .impressum-part {
   min-width: 100vw;
-  height: calc(100vh - 116px);
+  min-height: calc(100vh - 116px);
+  height: fit-content;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: center;
   padding: 20px 0px 20px 0px; 
 }
 
+.impressum-text {
+  width: 60%;
+  height: fit-content;
+}
+
+
+
+
 .datenschutz-part {
   min-width: 100vw;
-  height: calc(100vh - 116px);
+  min-height: calc(100vh - 116px);
+  height: fit-content;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: center;
-  padding: 20px 0px 20px 0px; 
+  padding: 20px 0px 20px 0px;  
 }
+
+.datenschutz-text {
+  width: 60%;
+  height: fit-content;
+}
+
+
 
 
 
@@ -262,7 +298,7 @@ p {
 
 
 
-
+/* Footer */
 
 .footer {
   width: 100%;
@@ -388,7 +424,7 @@ p {
 
 .adap-list {
   width: 180px;
-  height: 300px;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -441,6 +477,17 @@ p {
   .logo img {
     max-width: 120px;
     max-height: 100px;
+  }
+
+
+
+  .menu-part img {
+    max-width: 510px;
+    max-height: 718px;
+  }
+
+  .menu-text {
+    font-size: 23px;
   }
 
 
@@ -633,6 +680,16 @@ p {
   }
 
 
+  .menu-part img {
+    max-width: 433px;
+    max-height: 610px;
+  }
+
+  .menu-text {
+    font-size: 21px;
+  }
+
+
   
 
 }
@@ -764,17 +821,14 @@ p {
 
 
 
+  .menu-part img {
+    max-width: 368px;
+    max-height: 518px;
+  }
 
-
-
-
-
-
-
-  
-
-
-
+  .menu-text {
+    font-size: 19px;
+  }
 
 
 }
@@ -850,4 +904,11 @@ p {
   .info-uk-links a p {
     font-size: 10px;
   }
+
+  .menu-part img {
+    max-width: 313px;
+    max-height: 440px;
+  }
+
+  
 }
