--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -253,7 +253,10 @@ p {
   justify-content: flex-start;
   flex-direction: column;
   align-items: flex-start;
+  padding: 0px 0px 0px 20px;
 }
+
+
 
 
 
@@ -592,7 +595,13 @@ p {
   }
 
 
+  .impressum-text {
+    font-size: 12px;
+  }
 
+  .datenschutz-text {
+    font-size: 12px;
+  }
 
   .info-container {
     padding: 20px 0px 10px 0px;
